fixed errors behind the curtain

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,5 +54,5 @@
   height: 100vh;
   top: 0;
   left: 0;
-  z-index: 99999;
+  z-index: 1;
 }
